--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,6 +12,10 @@
     <!-- custom css -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/solarbeam/solarbeam.css') }}">
 
+    <!-- FONT ICONS -->
+    <link href="https://use.fontawesome.com/releases/v5.11.0/css/all.css" rel="stylesheet" crossorigin="anonymous">
+    <link href="{{ url_for('static', filename='css/flaticon.css') }}" rel="stylesheet">
+
     {% block stylesheets %}
     {% endblock stylesheets %}
 
